--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,7 @@ body {
     background-image: url('searchicon.png');
     background-position: 14px 12px;
     background-repeat: no-repeat;
+    min-width: 330px;
     font-size: 16px;
     padding: 14px 20px 12px 45px;
     border: none;
@@ -57,7 +58,7 @@ body {
     display: none;
     position: absolute;
     background-color: #f6f6f6;
-    min-width: 230px;
+    min-width: 330px;
     border: 1px solid #ddd;
     z-index: 1;
     cursor: pointer;
@@ -68,6 +69,8 @@ body {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
+    font-weight: bold;
+    text-shadow: 1px 1px rgb(116, 214, 231);
     display: block;
   }
   
